# lab_terminal_adventure_sequel

./: captain.py  helpers.py  pyproject.toml
kitchen/: kitchen.py
kitchen/cabinet/: cabinet.py
kitchen/chef/: chef.py
kitchen/drawer/: drawer.txt
kitchen/refrigerator/: refrigerator.py
