[tool.poetry]
name = "lab-terminal-adventure2"
version = "0.1.0"
description = "terminal adventure sequel"
authors = ["emmaqbrown <eqbrown@isf.edu.hk>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
